tests/test_scope/good/grand_parent_caller.catala_en
## Article

```catala
declaration scope A:
  context output x content integer

declaration scope B:
  a scope A
  context output y1 content integer
  context output y2 content integer

declaration scope C:
  b scope B
  context output z1 content integer
  context output z2 content integer


scope A:
  definition x equals 0

scope B:
  definition a.x equals y1
  definition y1 equals 1
  definition y2 equals a.x

scope C:
  definition b.y1 equals z1
  definition z1 equals 2
  definition z2 equals b.y2
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```

```catala-test {id="B.Interpret"}
catala Interpret -s B
```

```catala-test {id="C.Interpret"}
catala Interpret -s C
```
